--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="#">Link</a></li>
             <li><a href="#">Link</a></li>
             <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
+            <li><a href="https://github.com/CarrieShort"><i class="fa fa-github"></i></a></li>
           </ul>
         </nav>
       </header>
