create buildThumbnails method

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       </section>
       <section>
         <h2>Portfolio</h2>
+        <article class="template">
+          <section>
+            <h3>Title</h3>
+            <p>Short Description</p>
+          </section>
+        </article>
       </section>
       <footer></footer>
   </div>
