add placeholder for project details

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
             <p>Short Description</p>
           </section>
         </article>
+        <article class="project-details">
+          <h3>Title</h3>
+          <img src="" />
+          
+        </article>
       </section>
       <footer></footer>
   </div>
