--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </section>
       <section id="portfolio">
         <h2>Portfolio</h2>
-        <article class="template">
+        <article class="template project-preview" data-project="example">
           <section>
             <h3>Title</h3>
             <p>Short Description</p>
@@ -34,6 +34,8 @@
         <article class="project-details">
           <h3>Title</h3>
           <img src="" />
+          <p class="completed"></p>
+          <p class="description"></p>
         </article>
       </section>
       <footer></footer>
