make header and banner beautiful

--- a/index.html
+++ b/index.html
@@ -8,16 +8,30 @@
   <body>
     <div class="main-container">
       <header>
+        <h1>Carrie <span></span> Short</h1>
         <nav>
           <ul>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">History</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Portfolio</a></li>
             <li><a href="https://github.com/CarrieShort"><i class="fa fa-github"></i></a></li>
           </ul>
         </nav>
       </header>
+      <section class="banner">
+        <ul>
+          <li>UX/UI</li>
+          <li>Visual Design</li>
+          <li class="next-line">HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li class="next-line">jQuery</li>
+          <li>Ajax</li>
+          <li>React</li>
+          <li>Angular</li>
+        </ul>
+      </section>
       <section>
         <h2>About</h2>
         <p>Attack feet present belly, scratch hand when stroked or sit by the fire and intently sniff hand, or swat turds around the house. Meow for food, then when human fills food dish, take a few bites of food and continue meowing steal the warm chair right after you get up sit by the fire behind the couch lick plastic bags, for jump around on couch, meow constantly until given food, so throwup on your pillow. Russian blue eat grass, throw it back up yet eat the fat cats food and refuse to leave cardboard box purr for no reason. Bathe private parts with tongue then lick owner's face ignore the squirrels, you'll never catch them anyway immediately regret falling into bathtub chirp at birds so pee in the shoe. Lick yarn hanging out of own butt find something else more interesting attack the dog then pretend like nothing happened poop in litter box, scratch the walls and lay on arms while you're using the keyboard lick arm hair, run outside as soon as door open. </p>
