--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Carrie Short - Web Developer</title>
-    <link type="text/css" rel="stylesheet" href="vendor/styles/font-awesome.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" rel="stylesheet" href="vendor/styles/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="styles/base/reset.css">
     <link type="text/css" rel="stylesheet" href="styles/base/default.css">
     <link type="text/css" rel="stylesheet" href="styles/layout.css">
