make logo a navigable element, update data-link on click to be more flexible

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <div class="main-container">
       <header>
-        <h1>Carrie <span></span> Short</h1>
+        <h1><a href="#" data-link="overview">Carrie <span></span> Short</a></h1>
         <nav>
           <a href="#" class="mobile-menu"><i class="fa fa-bars"></i></a>
           <ul>
@@ -43,7 +43,7 @@
           </ul>
         </nav>
       </header>
-      <section class="banner">
+      <section class="banner" data-content="overview">
         <ul>
           <li>UX/UI</li>
           <li>Visual Design</li>
