separate view layer javascript into portfolioView.js

--- a/index.html
+++ b/index.html
@@ -81,5 +81,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
     <script src="scripts/portfolioProjects.js"></script>
     <script src="scripts/project.js"></script>
+    <script src="scripts/portfolioView.js"></script>
   </body>
 </html>
