--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Carrie Short - Web Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="vendor/styles/font-awesome.min.css">
-    <link type="text/css" rel="stylesheet" href="styles/base/reset.css">
+    <link type="text/css" rel="stylesheet" href="vendor/styles/reset.css">
     <link type="text/css" rel="stylesheet" href="styles/base/default.css">
     <link type="text/css" rel="stylesheet" href="styles/layout.css">
     <link type="text/css" rel="stylesheet" href="styles/module/header.css">
