change next-line class to nth child selector

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <ul>
           <li>UX/UI</li>
           <li>Visual Design</li>
-          <li class="next-line">HTML</li>
+          <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li class="next-line">jQuery</li>
+          <li>jQuery</li>
           <li>Ajax</li>
           <li>React</li>
           <li>Angular</li>
