add page.js functionality to portfolio, create scrollController and comment out old navHandler

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
   <body>
     <div class="main-container">
       <header>
-        <h1><a href="#" data-link="overview">Carrie <span></span> Short</a></h1>
+        <h1><a href="/" data-link="overview">Carrie <span></span> Short</a></h1>
         <nav>
           <a href="#" class="mobile-menu"><i class="fa fa-bars"></i></a>
           <ul>
-            <li data-link="about"><a href="#">About</a></li>
-            <li data-link="history"><a href="#">History</a></li>
-            <li data-link="skills"><a href="#">Skills</a></li>
-            <li data-link="portfolio"><a href="#">Portfolio</a></li>
+            <li><a href="about">About</a></li>
+            <li><a href="history">History</a></li>
+            <li><a href="skills">Skills</a></li>
+            <li><a href="portfolio">Portfolio</a></li>
             <li><a href="https://github.com/CarrieShort"><i class="fa fa-github"></i></a></li>
           </ul>
         </nav>
@@ -78,8 +78,11 @@
       <footer></footer>
     </div>
     <script src="vendor/scripts/jquery-2.2.1.min.js"></script>
+    <script src="vendor/scripts/page.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
     <script src="scripts/project.js"></script>
     <script src="scripts/portfolioView.js"></script>
+    <script src="scripts/scrollController.js"></script>
+    <script src="scripts/routes.js"></script>
   </body>
 </html>
