--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <h3>{{title}}</h3>
         <img src="img/projects/{{previewImage}}" />
         <p class="completed">{{publishedOn}}</p>
+        {{#if contributors}}
+        <h4>Contributors</h4>
+          <ul>
+          {{#each contributors}}
+          <li><a href="{{url}}">{{name}}</a>: {{commits}} commits</li>
+          {{/each}}
+        {{/if}}
         <p class="description">{{{description}}}</p>
         <a class="close"><i class="fa fa-times-circle"></i></a>
     </script>
@@ -82,12 +89,12 @@
         <p>Attack feet present belly, scratch hand when stroked or sit by the fire and intently sniff hand, or swat turds around the house. Meow for food, then when human fills food dish, take a few bites of food and continue meowing steal the warm chair right after you get up sit by the fire behind the couch lick plastic bags, for jump around on couch, meow constantly until given food, so throwup on your pillow. Russian blue eat grass, throw it back up yet eat the fat cats food and refuse to leave cardboard box purr for no reason. Bathe private parts with tongue then lick owner's face ignore the squirrels, you'll never catch them anyway immediately regret falling into bathtub chirp at birds so pee in the shoe. Lick yarn hanging out of own butt find something else more interesting attack the dog then pretend like nothing happened poop in litter box, scratch the walls and lay on arms while you're using the keyboard lick arm hair, run outside as soon as door open. </p>
         <p>Shove bum in owner's face like camera lens chew on cable where is my slave? I'm getting hungry cat is love, cat is life lay on arms while you're using the keyboard vommit food and eat it again. Give attitude. Lounge in doorway poop in litter box, scratch the walls so give attitude plan steps for world domination stare out the window eat prawns daintily with a claw then lick paws clean wash down prawns with a lap of carnation milk then retire to the warmest spot on the couch to claw at the fabric before taking a catnap and where is my slave? I'm getting hungry. Intently stare at the same spot sleep on keyboard. Kitty power! plan steps for world domination ears back wide eyed you call this cat food? but sit by the fire or meowwww. Stick butt in face refuse to leave cardboard box, shove bum in owner's face like camera lens climb a tree, wait for a fireman jump to fireman then scratch his face yet scratch at the door then walk away throwup on your pillow, so stare at ceiling light.</p>
       </section>
-      <section data-content="skills" id="repo">
-        <h2>Github Project</h2>
-        <ul>
-        </ul>
-
+      <section data-content="history">
+        <h2>Skills</h2>
+        <p>Attack feet present belly, scratch hand when stroked or sit by the fire and intently sniff hand, or swat turds around the house. Meow for food, then when human fills food dish, take a few bites of food and continue meowing steal the warm chair right after you get up sit by the fire behind the couch lick plastic bags, for jump around on couch, meow constantly until given food, so throwup on your pillow. Russian blue eat grass, throw it back up yet eat the fat cats food and refuse to leave cardboard box purr for no reason. Bathe private parts with tongue then lick owner's face ignore the squirrels, you'll never catch them anyway immediately regret falling into bathtub chirp at birds so pee in the shoe. Lick yarn hanging out of own butt find something else more interesting attack the dog then pretend like nothing happened poop in litter box, scratch the walls and lay on arms while you're using the keyboard lick arm hair, run outside as soon as door open. </p>
+        <p>Shove bum in owner's face like camera lens chew on cable where is my slave? I'm getting hungry cat is love, cat is life lay on arms while you're using the keyboard vommit food and eat it again. Give attitude. Lounge in doorway poop in litter box, scratch the walls so give attitude plan steps for world domination stare out the window eat prawns daintily with a claw then lick paws clean wash down prawns with a lap of carnation milk then retire to the warmest spot on the couch to claw at the fabric before taking a catnap and where is my slave? I'm getting hungry. Intently stare at the same spot sleep on keyboard. Kitty power! plan steps for world domination ears back wide eyed you call this cat food? but sit by the fire or meowwww. Stick butt in face refuse to leave cardboard box, shove bum in owner's face like camera lens climb a tree, wait for a fireman jump to fireman then scratch his face yet scratch at the door then walk away throwup on your pillow, so stare at ceiling light.</p>
       </section>
+
       <footer></footer>
     </div>
     <script src="vendor/scripts/jquery-2.2.1.min.js"></script>
@@ -96,8 +103,6 @@
     <script src="scripts/project.js"></script>
     <script src="scripts/githubtoken.js"></script>
     <script src="scripts/repo.js"></script>
-    <script src="scripts/repoView.js"></script>
-    <script src="scripts/repoController.js"></script>
     <script src="scripts/portfolioView.js"></script>
     <script src="scripts/scrollController.js"></script>
     <script src="scripts/routes.js"></script>
