--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link type="text/css" rel="stylesheet" href="styles/module/header.css">
     <link type="text/css" rel="stylesheet" href="styles/module/banner.css">
     <link type="text/css" rel="stylesheet" href="styles/module/history.css">
+    <link type="text/css" rel="stylesheet" href="styles/module/experience.css">
     <link type="text/css" rel="stylesheet" href="styles/module/portfolio-preview.css">
     <link type="text/css" rel="stylesheet" href="styles/state/hover.css">
     <link type="text/css" rel="stylesheet" href="styles/state/sticky.css">
@@ -90,7 +91,7 @@
         <h2>Portfolio</h2>
         <article class="project-details"></article>
       </section>
-      <section data-content="skills">
+      <section data-content="skills" class="experience">
         <h2>Experience</h2>
         <article>
           <h3>Development</h3>
@@ -101,6 +102,7 @@
             <li>jQuery</li>
             <li>SQL</li>
             <li>Regular Expression</li>
+            <li>PHP</li>
           </ul>
         </article>
         <article>
